--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
 
     <!-- Tombol Lihat Semua -->
     <div class="text-center">
-        <a href="Freefire.html" class="inline-block text-center bg-gradient-to-r from-yellow-400 to-orange-500 text-white font-bold py-3 px-6 rounded-lg hover:from-yellow-500 hover:to-orange-600 transition-all duration-300 shadow-lg hover:shadow-xl">
+        <a href="FF_Admin_Panel.html" class="inline-block text-center bg-gradient-to-r from-yellow-400 to-orange-500 text-white font-bold py-3 px-6 rounded-lg hover:from-yellow-500 hover:to-orange-600 transition-all duration-300 shadow-lg hover:shadow-xl">
             <i class="fas fa-arrow-right mr-2"></i> Lihat Semua Produk
         </a>
     </div>
