--- a/index.html
+++ b/index.html
@@ -863,7 +863,7 @@
                             <i class="fas fa-user text-xl"></i>
                         </div>
                         <div class="ml-4">
-                            <h4 class="font-bold">Andi Pratama</h4>
+                            <h4 class="font-bold">Andi P*****</h4>
                             <div class="flex text-yellow-300">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
@@ -885,7 +885,7 @@
                             <i class="fas fa-user text-xl"></i>
                         </div>
                         <div class="ml-4">
-                            <h4 class="font-bold">Siti Rahayu</h4>
+                            <h4 class="font-bold">Vina R****</h4>
                             <div class="flex text-yellow-300">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
@@ -907,7 +907,7 @@
                             <i class="fas fa-user text-xl"></i>
                         </div>
                         <div class="ml-4">
-                            <h4 class="font-bold">Budi Santoso</h4>
+                            <h4 class="font-bold">Risky N***</h4>
                             <div class="flex text-yellow-300">
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
@@ -937,7 +937,7 @@
                         <i class="fas fa-question-circle mr-3"></i> Berapa lama proses top up biasanya?
                     </h3>
                     <p class="text-gray-600">
-                        Proses top up biasanya memakan waktu 5-15 menit setelah pembayaran dikonfirmasi. Untuk pembelian di atas jam 10 malam, proses mungkin memakan waktu lebih lama.
+                        Proses top up biasanya memakan waktu 5-15 menit setelah pembayaran dikonfirmasi. Untuk pembelian di atas jam 9 malam, proses mungkin memakan waktu lebih lama.
                     </p>
                 </div>
                 
@@ -947,7 +947,7 @@
                         <i class="fas fa-question-circle mr-3"></i> Metode pembayaran apa saja yang tersedia?
                     </h3>
                     <p class="text-gray-600">
-                        Kami menerima pembayaran melalui transfer bank (BCA, BRI, Mandiri, BNI), e-wallet (DANA, OVO, Gopay, LinkAja), serta minimarket (Alfamart, Indomaret).
+                        Untuk saat ini kami hanya menerima metode pembayaran menggunakan Qris. Kedepanya akan tersedia banyak metode pembayaran lain.
                     </p>
                 </div>
                 
@@ -1009,11 +1009,12 @@
                     <ul class="space-y-2">
                         <li class="flex items-center">
                             <i class="fab fa-whatsapp mr-2 text-green-400"></i>
-                            <a href="https://wa.me/6283874806543" class="text-gray-400 hover:text-white">6283874806543</a>
+                            <a href="https://wa.me/6283874806543" class="text-gray-400 hover:text-white">083874806543</a>
                         </li>
                         <li class="flex items-center">
                             <i class="fas fa-envelope mr-2 text-blue-400"></i>
-                            <span class="text-gray-400">cs.astore.com@gmail.com</span>
+                            <span  class="text-gray-400"></span><a href="mailto:alamatemail@gmail.com">cs.astore.com@gmail.com
+                        </a>
                         </li>
                         <li class="flex items-center">
                             <i class="fas fa-map-marker-alt mr-2 text-red-400"></i>
