--- a/index.html
+++ b/index.html
@@ -1013,7 +1013,7 @@
                         </li>
                         <li class="flex items-center">
                             <i class="fas fa-envelope mr-2 text-blue-400"></i>
-                            <span  class="text-gray-400"></span><a href="mailto:alamatemail@gmail.com">cs.astore.com@gmail.com
+                            <span  class="text-gray-400"></span><a href="mailto:cs.astore.com@gmail.com">cs.astore.com@gmail.com
                         </a>
                         </li>
                         <li class="flex items-center">
