--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             
             <!-- View All Button -->
             <div class="px-6 pb-6 text-center">
-                <a id="view-all-button" href="https://example.com/flash-sale" class="btn-view-all inline-block text-center bg-gradient-to-r from-yellow-400 to-orange-500 text-white font-bold py-3 px-6 rounded-lg hover:from-yellow-500 hover:to-orange-600 transition-all duration-300 shadow-lg hover:shadow-xl">
+                <a id="view-all-button" href="katalog.html" class="btn-view-all inline-block text-center bg-gradient-to-r from-yellow-400 to-orange-500 text-white font-bold py-3 px-6 rounded-lg hover:from-yellow-500 hover:to-orange-600 transition-all duration-300 shadow-lg hover:shadow-xl">
                     <i class="fas fa-arrow-right mr-2"></i> Lihat Semua Produk Flash Sale
                 </a>
             </div>
