--- a/Mobilelegends.html
+++ b/Mobilelegends.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daftar Harga Gaming Store</title>
+    <title>Daftar Harga Mobile Legends</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         * {
@@ -303,7 +303,7 @@
 
     <div class="container">
         <div class="header">
-            <h1><i class="fas fa-gamepad"></i> ASTORE</h1>
+            <h1> ASTORE</h1>
             <p>Dapatkan Diamond dan Membership dengan Harga Terbaik!</p>
         </div>
 
