--- a/Mobilelegends.html
+++ b/Mobilelegends.html
@@ -303,7 +303,7 @@
 
     <div class="container">
         <div class="header">
-            <h1> ASTORE</h1>
+            <h1><i class="fas fa-fire"></i> ASTORE</h1>
             <p>Dapatkan Diamond dan Membership dengan Harga Terbaik!</p>
         </div>
 
@@ -313,7 +313,7 @@
                 <div class="special-offer">POPULER</div>
                 <div class="card-header diamond">
                     <i class="fas fa-gem icon"></i>
-                    <h3>Diamond</h3>
+                    <h2>Mobile Legends Diamond</h2>
                 </div>
                 <div class="card-content">
                     <div class="price-item">
@@ -417,7 +417,7 @@
                 <div class="special-offer">PREMIUM</div>
                 <div class="card-header membership">
                     <i class="fas fa-crown icon"></i>
-                    <h3>Membership</h3>
+                    <h2>Mobile Legends Membership</h2>
                 </div>
                 <div class="card-content">
                     <div class="price-item">
