--- a/index.html
+++ b/index.html
@@ -969,7 +969,7 @@
         <div class="container mx-auto px-4 text-center">
             <h2 class="text-2xl md:text-3xl font-bold mb-6">Siap Top Up Game Favorit Anda?</h2>
             <p class="text-lg mb-8 max-w-2xl mx-auto">
-                Dapatkan diamond, UC, dan VP dengan harga termurah dan proses tercepat. Hubungi kami sekarang juga!
+                Dapatkan Diamond, UC, dan VP dengan harga termurah dan proses tercepat. Hubungi kami sekarang juga!
             </p>
             <a href="https://wa.me/6283874806543?text=Halo,%20saya%20ingin%20top%20up%20game" 
                class="bg-green-500 hover:bg-green-600 text-white px-8 py-4 rounded-full font-bold text-lg inline-flex items-center">
