--- a/index.html
+++ b/index.html
@@ -984,9 +984,7 @@
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <!-- About -->
                 <div>
-                    <h3 class="text-xl font-bold mb-4 flex items-center">
-                        <i class="fas fa-gamepad mr-2"></i> ASTore
-                    </h3>
+                    <h3 class="text-xl font-bold mb-4 flex items-center">ASTore </h3>
                     <p class="text-gray-400">
                         Penyedia layanan top up game termurah dan terpercaya di Indonesia. Melayani dengan cepat dan aman sejak 2023.
                     </p>
