--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
             <i class="fas fa-tools"></i>
         </div>
         
-        <h1 class="maintenance-title">Website Sedang Dalam Progress Developing</h1>
+        <h1 class="maintenance-title">Website Sedang Dalam Proses Developing</h1>
         
         <p class="maintenance-subtitle">
             Website dapat diakses pada 1 Juli 2025....
