--- a/Index.html
+++ b/Index.html
@@ -202,7 +202,7 @@
             
             <!-- View All Products Button -->
             <div class="px-8 pb-8 text-center">
-                <a href="https://shopee.co.id/pubgmobile" 
+                <a href="katalog.html" 
                    target="_blank"
                    class="inline-block py-4 px-8 rounded-xl font-bold text-lg transition-all duration-300 bg-gradient-to-r from-blue-600 to-purple-700 hover:from-blue-700 hover:to-purple-800 text-white shadow-lg hover:shadow-xl transform hover:scale-105">
                     <i class="fas fa-external-link-alt mr-3"></i>
